--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.24.1",
     "browser-env": "^3.2.1",
+    "file-loader": "^1.1.6",
     "imports-loader": "^0.7.1",
     "json-loader": "^0.5.4",
+    "node-loader": "^0.6.0",
     "nyc": "^11.2.1",
     "uglifyjs-webpack-plugin": "^1.0.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1"
+  },
+  "dependencies": {
+    "drag-drop": "^2.13.2",
+    "pdfjs-dist": "^2.0.281"
   }
 }
