--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "build:watch": "npm run build -- --watch"
+    "build:watch": "npm run build -- --watch --mode development"
   },
   "author": "matatsuna <matatsuna@gmail.com>",
   "license": "MIT",
@@ -25,7 +25,8 @@
     "nyc": "^11.9.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^0.6.2",
-    "webpack": "^3.12.0"
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "drag-drop": "^2.14.0",
