--- a/package.json
+++ b/package.json
@@ -11,27 +11,19 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.24.1",
-    "browser-env": "^3.2.6",
-    "file-loader": "^1.1.11",
-    "imports-loader": "^0.7.1",
-    "json-loader": "^0.5.4",
-    "node-loader": "^0.6.0",
-    "nyc": "^11.9.0",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5"
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.6"
   },
   "dependencies": {
-    "drag-drop": "^2.14.0",
+    "drag-drop": "^4.2.0",
     "form-data": "^2.5.0",
-    "node-fetch": "^1.7.3",
-    "pdfjs-dist": "^2.0.943"
+    "node-fetch": "^2.6.0",
+    "pdfjs-dist": "^2.1.266"
   }
 }
